--- a/app/views/admin/badges/index.html.erb
+++ b/app/views/admin/badges/index.html.erb
@@ -1,6 +1,8 @@
 <div class="row justify-content-center">
     <p>
       [ <%= link_to t('.new_badge'), new_admin_badge_path %> ]
+      [ <%= link_to t('.users_badges'), admin_user_badges_path %> ]
+      <%= link_to t('actions.back'), admin_tests_path %>
     </p>
 
   <div class="col col-md-4">
