--- a/app/views/admin/feedbacks/index.html.erb
+++ b/app/views/admin/feedbacks/index.html.erb
@@ -1,4 +1,5 @@
 <h2><%= t('.header') %></h2>
+<%= link_to t('actions.back'), admin_tests_path %>
 <table class="table table-hover">
   <thead class="table-dark">
     <tr>
