--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,11 +1,16 @@
 
-  <h2><%= t('.header', title: @test_passage.test.title) %></h2>
+  <h2><%= t('.header', title: @test_passage.test.title) %></h2> 
+  <% if @test_passage.test.timer %>
+      <%= content_tag :div, class: "timer", data: {time: TimerService.new(@test_passage).test_time_allotted} %>
+  <% end %>
+  
   <p>
     <%= t('.question',
     current_question: @test_passage.current_question_number, 
     all_questions: @test_passage.test.questions.count)%> -
     <%= link_to t('actions.gist_question'), test_passage_gists_path(@test_passage), method: :post%>
     <%= render 'progress_bar' %>
+    
   </p>
   <b><%= @test_passage.current_question.body%></b>
 
