--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,8 +1,10 @@
 <div class="row justify-content-center">
-  <p>
+  <% if current_user %>
+  <p> 
       [ <%= link_to t('actions.badges'), badges_path %> ]
       [ <%= link_to t('.user_badges', user: current_user.email), user_user_badges_path(current_user) %> ]
   </p>
+  <% end %>
 
   <div class="col col-md-4">
     <table class="table table-hover">
