--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -17,12 +17,17 @@
       </p>
 
       <p>
+        <%= form.label :timer, class: "form-label", id: :test_timer %>        
+        <%= form.number_field :timer, class: 'form-control form-control-sm', required: true%>
+      </p>
+
+      <p>
         <%= form.label :publish, class: "form-label" %>
         <%= form.check_box :publish, id: :test_publish %>
       </p>
       
       <p>
-        <%= form.submit t('actions.submit'), class: 'btn-primary' %>
+        <%= form.submit t('actions.submit'), class: ' btn-primary' %>
         <%= link_to t('actions.back'), admin_tests_path %>
       </p>
     <% end %>
