feat: added implementing methods of timer_service without initialize

--- a/app/views/shared/_timer.html.erb
+++ b/app/views/shared/_timer.html.erb
@@ -1,4 +1,4 @@
 
       <%= content_tag :div, '', 
         class: "timer", 
-        data: {time: TimerService.new(@test_passage).time_end } %>
+        data: {time: TimerService.new.time_end(@test_passage) } %>
